Added /admin/getConfig endpoint
